fix hosted videos breaking out of container

--- a/templates/default/css/source/content.scss
+++ b/templates/default/css/source/content.scss
@@ -69,3 +69,8 @@ hr.content_split {
 }
 
 .article table {border: 1px solid #2e2e2e;}
+
+.ckeditor-html5-video video {
+	width: 100%;
+	height: auto;
+}
